--- a/src/app/views/registration-form/registration-form.component.html
+++ b/src/app/views/registration-form/registration-form.component.html
@@ -124,7 +124,18 @@
       </div>
       <div class="row">
         <div class="col-md-6 offset-md-3">
-          <button class="btn btn-primary w-100" [disabled]="form.invalid" type="submit">ENVIAR</button>
+          <!-- recaptcha con la clave del sitio-->
+          <div class="mb-3">
+            <div class="d-flex justify-content-center">
+              <re-captcha (resolved)="resolved($event)"
+              siteKey="6LcCnvYpAAAAANhQwPdVNrZkKoHrdoUeURM5khPJ"></re-captcha>
+            </div>
+            <div *ngIf="!captchaValid && form.get('captcha')?.touched" class="text-danger">
+              <small>Completa el reCAPTCHA</small>
+            </div>
+          </div>
+
+          <button class="btn btn-primary w-100" [disabled]="form.invalid || !captchaValid" type="submit">ENVIAR</button>
         </div>
       </div>
     </form>
