--- a/src/app/views/end-process/end-process.component.html
+++ b/src/app/views/end-process/end-process.component.html
@@ -1,1 +1,100 @@
-<p>end-process works!</p>
+<div class="card">
+  <p-table
+    #dt
+    [value]="filteredData"
+    [paginator]="true"
+    [rows]="5"
+    [tableStyle]="{ 'min-width': '50rem' }"
+  >
+    <ng-template pTemplate="caption">
+      <div class="flex">
+        <div class="p-inputgroup ml-auto">
+          <span class="p-inputgroup-addon">
+            <i class="pi pi-search"></i>
+          </span>
+          <input
+            pInputText
+            type="text"
+            (input)="filterGlobal($event)"
+            placeholder="Buscar"
+          />
+        </div>
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="header">
+      <tr style="text-align: center">
+        <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon></th>
+        <th pSortableColumn="cedula">
+          Cédula <p-sortIcon field="cedula"></p-sortIcon>
+        </th>
+        <th pSortableColumn="nombresCompletos">
+          Nombres Completos <p-sortIcon field="nombresCompletos"></p-sortIcon>
+        </th>
+        <th pSortableColumn="genero">
+          Género <p-sortIcon field="genero"></p-sortIcon>
+        </th>
+        <th pSortableColumn="tipoCurso">
+          Tipo de Curso <p-sortIcon field="tipoCurso"></p-sortIcon>
+        </th>
+        <th>Comprobante de Pago</th>
+        <th pSortableColumn="pagado">
+          Pagado <p-sortIcon field="pagado"></p-sortIcon>
+        </th>
+        <th>Acciones</th>
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-rowData>
+      <tr>
+        <td style="text-align: center">{{ rowData.id }}</td>
+        <td style="text-align: center">{{ rowData.cedula }}</td>
+        <td style="text-align: center">{{ rowData.nombresCompletos }}</td>
+        <td style="text-align: center">{{ rowData.genero }}</td>
+        <td style="text-align: center">{{ rowData.tipoCurso }}</td>
+        <td style="text-align: center">
+          <button
+            class="btn_search"
+            type="button"
+            (click)="verComprobante(rowData)"
+          >
+            <i class="pi pi-search" style="font-size: 1rem"></i>
+          </button>
+        </td>
+        <td style="text-align: center">
+          <p-inputSwitch
+            [(ngModel)]="rowData.pagado"
+            [disabled]="true"
+          ></p-inputSwitch>
+        </td>
+        <td style="text-align: center">
+          <button class="btn_success" (click)="aceptar(rowData)">
+            <p-tag icon="pi pi-check" severity="success" value="Aceptar" />
+          </button>
+
+          <button class="btn_success" (click)="rechazar(rowData)">
+            <p-tag icon="pi pi-times" severity="danger" value="Rechazar" />
+          </button>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+<p-dialog
+  header="Comprobante de Pago"
+  [modal]="true"
+  [(visible)]="Comprobante"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+  [draggable]="false"
+>
+  <div class="dialog-content-center">
+    <p-image
+      src="https://getquipu.com/wp-content/uploads/2021/10/02155904/plantilla-de-excel-recibo-de-pago-1.png"
+      alt="Image"
+      width="250"
+      [preview]="true"
+    />
+  </div>
+</p-dialog>
