--- a/src/app/views/verify-data/verify-data.component.html
+++ b/src/app/views/verify-data/verify-data.component.html
@@ -1,1 +1,88 @@
-<p>verify-data works!</p>
+<div class="card">
+  <p-table
+    #dt
+    [value]="filteredData"
+    [paginator]="true"
+    [rows]="5"
+    [tableStyle]="{ 'min-width': '50rem' }"
+  >
+    <ng-template pTemplate="caption">
+      <div class="flex">
+        <div class="p-inputgroup ml-auto">
+          <span class="p-inputgroup-addon">
+            <i class="pi pi-search"></i>
+          </span>
+          <input
+            pInputText
+            type="text"
+            (input)="filterGlobal($event)"
+            placeholder="Buscar"
+          />
+        </div>
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="header">
+      <tr style="text-align: center">
+        <th pSortableColumn="cedula">
+          Cédula <p-sortIcon field="cedula"></p-sortIcon>
+        </th>
+        <th pSortableColumn="nombresCompletos">
+          Nombre Completo <p-sortIcon field="nombresCompletos"></p-sortIcon>
+        </th>
+        <th pSortableColumn="genero">
+          Género <p-sortIcon field="genero"></p-sortIcon>
+        </th>
+        <th pSortableColumn="provincia">
+          Provincia <p-sortIcon field="provincia"></p-sortIcon>
+        </th>
+        <th pSortableColumn="tipoCurso">
+          Tipo de Curso <p-sortIcon field="tipoCurso"></p-sortIcon>
+        </th>
+        <th>Estado</th>
+        <th>Acciones</th>
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-rowData>
+      <tr>
+        <td style="text-align: center">{{ rowData.cedula }}</td>
+        <td style="text-align: center">{{ rowData.nombresCompletos }}</td>
+        <td style="text-align: center">{{ rowData.genero }}</td>
+        <td style="text-align: center">{{ rowData.provincia }}</td>
+        <td style="text-align: center">{{ rowData.tipoCurso }}</td>
+        <td style="text-align: center">
+          <p-tag *ngIf="rowData.aceptado" icon="pi pi-check" severity="success" value="Aceptado"></p-tag>
+          <p-tag *ngIf="!rowData.aceptado" icon="pi pi-times" severity="danger" value="Rechazado"></p-tag>
+        </td>
+        <td style="text-align: center">
+          <button class="btn_success" (click)="aceptar(rowData)">
+            <p-tag icon="pi pi-check" severity="success" value="Aceptar"></p-tag>
+          </button>
+
+          <button class="btn_danger" (click)="rechazar(rowData)">
+            <p-tag icon="pi pi-times" severity="danger" value="Rechazar"></p-tag>
+          </button>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+<p-dialog
+  header="Comprobante de Pago"
+  [modal]="true"
+  [(visible)]="Comprobante"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+  [draggable]="false"
+>
+  <div class="dialog-content-center">
+    <p-image
+      src="https://getquipu.com/wp-content/uploads/2021/10/02155904/plantilla-de-excel-recibo-de-pago-1.png"
+      alt="Image"
+      width="250"
+      [preview]="true"
+    ></p-image>
+  </div>
+</p-dialog>
