--- a/src/app/views/user/registration-form/registration-form.component.html
+++ b/src/app/views/user/registration-form/registration-form.component.html
@@ -1,3 +1,5 @@
+<app-info></app-info>
+
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
   <div class="col-md-8">
     <form (ngSubmit)="save($event)" [formGroup]="form" class="p-4 border rounded bg-light shadow">
