--- a/src/app/views/user/registration-form/registration-form.component.html
+++ b/src/app/views/user/registration-form/registration-form.component.html
@@ -16,18 +16,18 @@
               type="text"
               maxlength="10"
               class="form-control"
-              formControlName="cedula"
-              (blur)="markAsTouched('cedula')"
+              formControlName="identification"
+              (blur)="markAsTouched('identification')"
               (input)="filterOnlyNumbers($event)"
               [ngClass]="{
-                'is-invalid': isInvalid('cedula'),
-                'is-valid': isValid('cedula')
+                'is-invalid': isInvalid('identification'),
+                'is-valid': isValid('identification')
               }"
               pattern="[0-9]*"
               inputmode="numeric"
             />
-            <small *ngIf="getError('cedula', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('cedula', 'cedulaInvalida')" class="text-danger">Cédula inválida</small>
+            <small *ngIf="getError('identification', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('identification', 'cedulaInvalida')" class="text-danger">Cédula inválida</small>
           </div>
 
           <!-- Número de Celular -->
@@ -37,17 +37,17 @@
               type="text"
               maxlength="10"
               class="form-control"
-              formControlName="telefono"
-              (blur)="markAsTouched('telefono')"
+              formControlName="phone"
+              (blur)="markAsTouched('phone')"
               (input)="filterOnlyNumbers($event)"
               [ngClass]="{
-                'is-invalid': isInvalid('telefono'),
-                'is-valid': isValid('telefono')
+                'is-invalid': isInvalid('phone'),
+                'is-valid': isValid('phone')
               }"
               pattern="[0-9]*"
             />
-            <small *ngIf="getError('telefono', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('telefono', 'telefonoInvalido')" class="text-danger">Número de celular inválido</small>
+            <small *ngIf="getError('phone', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('phone', 'telefonoInvalido')" class="text-danger">Número de celular inválido</small>
           </div>
         </div>
 
@@ -58,15 +58,15 @@
             <input
               type="email"
               class="form-control"
-              formControlName="correoElectronico"
-              (blur)="markAsTouched('correoElectronico')"
+              formControlName="email"
+              (blur)="markAsTouched('email')"
               [ngClass]="{
-                'is-invalid': isInvalid('correoElectronico'),
-                'is-valid': isValid('correoElectronico')
+                'is-invalid': isInvalid('email'),
+                'is-valid': isValid('email')
               }"
             />
-            <small *ngIf="getError('correoElectronico', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('correoElectronico', 'correoInvalido')" class="text-danger">Correo electrónico inválido</small>
+            <small *ngIf="getError('email', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('email', 'correoInvalido')" class="text-danger">Correo electrónico inválido</small>
           </div>
 
           <!-- Nombre Completo -->
@@ -75,20 +75,20 @@
             <input
               type="text"
               class="form-control"
-              formControlName="nombreCompleto"
-              (blur)="markAsTouched('nombreCompleto')"
+              formControlName="name"
+              (blur)="markAsTouched('name')"
               (input)="filterOnlyLetters($event)"
               maxlength="100"
               minlength="3"
               [ngClass]="{
-                'is-invalid': isInvalid('nombreCompleto'),
-                'is-valid': isValid('nombreCompleto')
+                'is-invalid': isInvalid('name'),
+                'is-valid': isValid('name')
               }"
             />
-            <small *ngIf="getError('nombreCompleto', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('nombreCompleto', 'minlength')" class="text-danger">El nombre debe tener al menos 3 caracteres</small>
-            <small *ngIf="getError('nombreCompleto', 'maxlength')" class="text-danger">El nombre no puede exceder los 100 caracteres</small>
-            <small *ngIf="getError('nombreCompleto', 'nombreInvalido')" class="text-danger">Nombre inválido</small>
+            <small *ngIf="getError('name', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('name', 'minlength')" class="text-danger">El nombre debe tener al menos 3 caracteres</small>
+            <small *ngIf="getError('name', 'maxlength')" class="text-danger">El nombre no puede exceder los 100 caracteres</small>
+            <small *ngIf="getError('name', 'nombreInvalido')" class="text-danger">Nombre inválido</small>
           </div>
         </div>
 
@@ -99,15 +99,15 @@
             <input
               type="date"
               class="form-control custom-date-input"
-              formControlName="fechaNacimiento"
-              (blur)="markAsTouched('fechaNacimiento')"
+              formControlName="birthdate"
+              (blur)="markAsTouched('birthdate')"
               [ngClass]="{
-                'is-invalid': isInvalid('fechaNacimiento'),
-                'is-valid': isValid('fechaNacimiento')
+                'is-invalid': isInvalid('birthdate'),
+                'is-valid': isValid('birthdate')
               }"
             />
-            <small *ngIf="getError('fechaNacimiento', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('fechaNacimiento', 'edadInvalida')" class="text-danger">Debe tener al menos 18 años y menos de 50</small>
+            <small *ngIf="getError('birthdate', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('birthdate', 'edadInvalida')" class="text-danger">Debe tener al menos 18 años y menos de 50</small>
           </div>
 
           <!-- Provincia -->
@@ -115,17 +115,17 @@
             <label>Provincia<span class="text-danger">*</span>:</label>
             <select
               class="form-control"
-              formControlName="provincia"
-              (blur)="markAsTouched('provincia')"
+              formControlName="id_province"
+              (blur)="markAsTouched('id_province')"
               [ngClass]="{
-                'is-invalid': isInvalid('provincia'),
-                'is-valid': isValid('provincia')
+                'is-invalid': isInvalid('id_province'),
+                'is-valid': isValid('id_province')
               }"
             >
               <option value="">Seleccione una provincia</option>
               <option *ngFor="let provincia of provinces" [value]="provincia._id">{{ provincia.nombre }}</option>
             </select>
-            <small *ngIf="getError('provincia', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('id_province', 'required')" class="text-danger">El campo es obligatorio</small>
           </div>
         </div>
 
@@ -136,16 +136,16 @@
             <input
               type="text"
               class="form-control"
-              formControlName="direccion"
-              (blur)="markAsTouched('direccion')"
+              formControlName="address"
+              (blur)="markAsTouched('address')"
               [ngClass]="{
-                'is-invalid': isInvalid('direccion'),
-                'is-valid': isValid('direccion')
+                'is-invalid': isInvalid('address'),
+                'is-valid': isValid('address')
               }"
             />
-            <small *ngIf="getError('direccion', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('direccion', 'minlength')" class="text-danger">La dirección debe tener al menos 10 caracteres</small>
-            <small *ngIf="getError('direccion', 'maxlength')" class="text-danger">La dirección no puede exceder los 100 caracteres</small>
+            <small *ngIf="getError('address', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('address', 'minlength')" class="text-danger">La dirección debe tener al menos 10 caracteres</small>
+            <small *ngIf="getError('address', 'maxlength')" class="text-danger">La dirección no puede exceder los 100 caracteres</small>
           </div>
 
           <!-- Género -->
@@ -153,17 +153,17 @@
             <label>Género<span class="text-danger">*</span>:</label>
             <select
               class="form-control"
-              formControlName="genero"
-              (blur)="markAsTouched('genero')"
+              formControlName="id_gender"
+              (blur)="markAsTouched('id_gender')"
               [ngClass]="{
-                'is-invalid': isInvalid('genero'),
-                'is-valid': isValid('genero')
+                'is-invalid': isInvalid('id_gender'),
+                'is-valid': isValid('id_gender')
               }"
             >
               <option value="">Seleccione un género</option>
               <option *ngFor="let gender of genders" [value]="gender._id">{{ gender.name }}</option>
             </select>
-            <small *ngIf="getError('genero', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('id_gender', 'required')" class="text-danger">El campo es obligatorio</small>
           </div>
         </div>
 
@@ -173,17 +173,17 @@
             <label>Tipo de Comando<span class="text-danger">*</span>:</label>
             <select
               class="form-control"
-              formControlName="tipoComando"
-              (blur)="markAsTouched('tipoComando')"
+              formControlName="id_commandType"
+              (blur)="markAsTouched('id_commandType')"
               [ngClass]="{
-                'is-invalid': isInvalid('tipoComando'),
-                'is-valid': isValid('tipoComando')
+                'is-invalid': isInvalid('id_commandType'),
+                'is-valid': isValid('id_commandType')
               }"
             >
               <option value="">Seleccione un comando</option>
               <option *ngFor="let commandType of commandTypes" [value]="commandType._id">{{ commandType.name }}</option>
             </select>
-            <small *ngIf="getError('tipoComando', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('id_commandType', 'required')" class="text-danger">El campo es obligatorio</small>
           </div>
 
           <!-- Nota de Grado sobre 20 Pts -->
@@ -192,18 +192,18 @@
             <input
               type="number"
               class="form-control"
-              formControlName="notaGrado"
-              (blur)="markAsTouched('notaGrado')"
+              formControlName="gradeNote"
+              (blur)="markAsTouched('gradeNote')"
               [ngClass]="{
-                'is-invalid': isInvalid('notaGrado'),
-                'is-valid': isValid('notaGrado')
+                'is-invalid': isInvalid('gradeNote'),
+                'is-valid': isValid('gradeNote')
               }"
               min="0"
               max="20"
             />
-            <small *ngIf="getError('notaGrado', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('notaGrado', 'min')" class="text-danger">La nota debe ser mayor o igual a 0</small>
-            <small *ngIf="getError('notaGrado', 'max')" class="text-danger">La nota no puede exceder los 20 puntos</small>
+            <small *ngIf="getError('gradeNote', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('gradeNote', 'min')" class="text-danger">La nota debe ser mayor o igual a 0</small>
+            <small *ngIf="getError('gradeNote', 'max')" class="text-danger">La nota no puede exceder los 20 puntos</small>
           </div>
         </div>
 
